# spawn-cli

./: .cursorignore  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.cursor/: mcp.json
.cursor/skills/mempalace-configure-palace/: SKILL.md
.cursor/skills/mempalace-diagnose-palace/: SKILL.md
.cursor/skills/mempalace-search/: SKILL.md
.cursor/skills/spectask-code-review-passed/: SKILL.md
.cursor/skills/spectask-create/: SKILL.md
.cursor/skills/spectask-design/: SKILL.md
.cursor/skills/spectask-execute/: SKILL.md
.cursor/skills/spectask-extend/: SKILL.md
.cursor/skills/spectask-seed-create/: SKILL.md
.cursor/skills/spectask-spec-review-passed/: SKILL.md
.mempalace/: wakeup.md
scripts/: publish.py
spawn/: navigation.yaml
spawn/.extend/mempalace-ext/: source.yaml
spawn/.extend/spectask/: source.yaml
spawn/.metadata/: git-ignore.txt
spec/: design.yaml  navigation.yaml
spec/design/: agentic-flow.md  data-structure.md  extension-author-guide.md  extensions.md  hla.md  ide-adapters.md  user-guide.md  utility-method-flows.md  utility.md
spec/extend/: 00-general.md
spec/seeds/: 1-extension-link-localread-bridge.md  2-ide-adapters-missing.md  3-short-hints-navigation-skills.md  _DONE_3-short-hints-navigation-skills.md
src/spawn_cli/: cli.py  errors.py  warnings_display.py
src/spawn_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_warnings_display.py
tests/core/: test_download.py  test_high_level.py  test_low_level.py  test_mcp_stdio.py  test_scripts.py
tests/ide/: test_claude_code.py  test_codex.py  test_cursor.py  test_gemini_cli.py  test_github_copilot.py  test_mcp_stdio_proxy_parity.py  test_registry.py  test_windsurf.py
tests/io/: test_json_io.py  test_lock.py  test_paths.py  test_text_io.py  test_toml_io.py  test_yaml_io.py
tests/models/: test_config.py  test_mcp.py  test_metadata.py  test_navigation.py  test_skill.py
(+123 files in other folders)
